form in task addition component

--- a/frontend/src/app/add-task/add-task.component.html
+++ b/frontend/src/app/add-task/add-task.component.html
@@ -4,28 +4,28 @@
       Add new task
     </mat-panel-title>
   </mat-expansion-panel-header>
+  <form [formGroup]="newTaskForm" (ngSubmit)="addTask()">
   <mat-form-field appearance="legacy">
     <mat-label *ngIf="!formError">Title</mat-label>
     <mat-label *ngIf="formError">Please name Your task!</mat-label>
-    <input matInput type="text" [(ngModel)]="newTask.name" />
+    <input matInput type="text" formControlName="name" />
   </mat-form-field>
   <br />
   <mat-form-field appearance="legacy">
     <mat-label>Date</mat-label>
-    <input matInput [matDatepicker]="picker" [(ngModel)]="newTask.date" />
+    <input matInput [matDatepicker]="picker" formControlName="date" />
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   <br />
   <mat-form-field appearance="legacy">
     <mat-label>Additional informations</mat-label>
-    <input matInput type="text" [(ngModel)]="newTask.comment" />
+    <input matInput type="text" formControlName="comment" />
   </mat-form-field>
   <div class="button-container">
     <button
-      mat-icon-button
+      mat-icon-button type="submit"
       aria-label="Add task button"
-      (click)="addTask();"
     >
       <mat-icon>check</mat-icon>
     </button>
@@ -37,4 +37,5 @@
       <mat-icon>clear</mat-icon>
     </button>
   </div>
+</form>
 </mat-expansion-panel>
