--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -66,7 +66,8 @@ body
   align-items: center
 
 .mat-expansion-panel-header-description
-  flex-flow: row-reverse
+  flex-flow: row
+  justify-content: flex-end
   padding-right: 20px
   .mat-icon
     font-size: 17px
