--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,17 +14,17 @@
         <mat-tab-group headerPosition="below">
           <mat-tab label="Active">
             <ng-template matTabContent>
-              <app-list></app-list>
+              <app-active-tasks></app-active-tasks>
             </ng-template>
           </mat-tab>
           <mat-tab label="Finished">
             <ng-template matTabContent>
-              <app-history type="finished"></app-history>
+              <app-other-tasks type="finished"></app-other-tasks>
             </ng-template>
           </mat-tab>
           <mat-tab label="Cancelled">
             <ng-template matTabContent>
-              <app-history type="canceled"></app-history>
+              <app-other-tasks type="canceled"></app-other-tasks>
             </ng-template>
           </mat-tab>
         </mat-tab-group>
