--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -64,10 +64,14 @@ body
 
 .mat-content
   align-items: center
-
+.mat-expansion-panel-header
+  padding: 0 15px 0 30px!important
 .mat-expansion-panel-header-description
   flex-flow: row
   justify-content: flex-end
-  padding-right: 20px
+  margin-right: 0px!important
   .mat-icon
     font-size: 17px
+
+.list-list-box
+  flex-grow: 1
