--- a/frontend/src/app/active-tasks/active-tasks.component.html
+++ b/frontend/src/app/active-tasks/active-tasks.component.html
@@ -2,7 +2,7 @@
 <app-add-task (taskAdded)='onNewTask($event)'></app-add-task>
 <br />
 <mat-accordion>
-  <mat-expansion-panel
+  <mat-expansion-panel hideToggle
     *ngFor="let task of tasks"
     [expanded]="task === editedTask"
   >
