--- a/frontend/src/app/other-tasks/other-tasks.component.html
+++ b/frontend/src/app/other-tasks/other-tasks.component.html
@@ -1,4 +1,4 @@
-<app-summary></app-summary>
+<app-summary [listId]="listId"></app-summary>
 <mat-accordion>
   <mat-expansion-panel hideToggle *ngFor="let task of tasks">
     <mat-expansion-panel-header>
