--- a/frontend/src/app/tasks/tasks.component.html
+++ b/frontend/src/app/tasks/tasks.component.html
@@ -8,23 +8,26 @@
             <div>{{ date | date: "MMMM" }}</div>
             <div>{{ date | date: "y" }}</div>
           </div>
+          <div style="font-size: 40px; padding-left: 40px;">
+            {{list.name}}
+          </div>
         </div>
       </div>
       <div class="list-box">
         <mat-tab-group headerPosition="below">
           <mat-tab label="Active">
             <ng-template matTabContent>
-              <app-active-tasks></app-active-tasks>
+              <app-active-tasks [listId]="list._id"></app-active-tasks>
             </ng-template>
           </mat-tab>
           <mat-tab label="Finished">
             <ng-template matTabContent>
-              <app-other-tasks type="finished"></app-other-tasks>
+              <app-other-tasks [listId]="list._id" type="finished"></app-other-tasks>
             </ng-template>
           </mat-tab>
           <mat-tab label="Cancelled">
             <ng-template matTabContent>
-              <app-other-tasks type="canceled"></app-other-tasks>
+              <app-other-tasks [listId]="list._id" type="canceled"></app-other-tasks>
             </ng-template>
           </mat-tab>
         </mat-tab-group>
