list id source changed in active tasks view

--- a/frontend/src/app/tasks/tasks.component.html
+++ b/frontend/src/app/tasks/tasks.component.html
@@ -17,7 +17,7 @@
         <mat-tab-group headerPosition="below">
           <mat-tab label="Active">
             <ng-template matTabContent>
-              <app-active-tasks [listId]="list._id"></app-active-tasks>
+              <app-active-tasks></app-active-tasks>
             </ng-template>
           </mat-tab>
           <mat-tab label="Finished">
