--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -1,4 +1,19 @@
-@import '~@angular/material/prebuilt-themes/pink-bluegrey.css'
+@import '~@angular/material/theming'
+@include mat-core()
+
+$light-app-primary: mat-palette($mat-teal)
+$light-app-accent:  mat-palette($mat-blue-grey)
+$light-app-warn:    mat-palette($mat-pink, 700)
+$light-app-theme: mat-light-theme( $light-app-primary, $light-app-accent, $light-app-warn )
+
+$dark-app-primary: mat-palette($mat-teal)
+$dark-app-accent:  mat-palette($mat-blue-grey)
+$dark-app-warn:    mat-palette($mat-pink, 500)
+$dark-app-theme: mat-dark-theme( $dark-app-primary, $dark-app-accent, $dark-app-warn )
+@include angular-material-theme($dark-app-theme)
+
+.alternative
+  @include angular-material-theme($light-app-theme)
 
 body
   font-family: Roboto, Arial, sans-serif
