--- a/frontend/src/app/tasks/tasks.component.html
+++ b/frontend/src/app/tasks/tasks.component.html
@@ -1,3 +1,13 @@
+<button
+  class="home-button"
+  mat-icon-button
+  aria-label="Edit task button"
+  (click)="goHome()"
+  color="primary"
+>
+  <mat-icon>home</mat-icon>
+</button>
+
 <body class="mat-app-background">
   <div class="container">
     <div class class="main-container">
